--- a/bootstrap.css
+++ b/bootstrap.css
@@ -1,7 +1,6 @@
 * {
-  margin: 0%;
   font-family: sans-serif;
-  padding: 2px;
+  padding: 0px;
 }
 
 body {
@@ -31,10 +30,11 @@ p {
 }
 
 .inflacion img {
-  width: 200%;
+  width: 160%;
   height: 100%;
   border: 2px solid black;
   padding: 0px;
+  margin: 4px;
 }
 
 .caja-padre {
