--- a/bootstrap.scss
+++ b/bootstrap.scss
@@ -6,10 +6,14 @@
 body {
     overflow-x: hidden;
 }
+.darkMode {
+    background: black;
+  }
 
 p {
     text-align: center;
 }
+
 
 .container {
     text-align: center;
@@ -162,6 +166,15 @@ font-size: 30px;}
     color:black;
     font-size: 30px;  
 } 
+.modo { text-align: center;
+    padding: 10px;
+margin: 10px;
+.enlace {
+    text-align: center;
+    background: black;
+    color:white
+    ;
+}}
 @media screen and (min-width: 100px) and (max-width: 959px) {
     .inflacion img {
         width: 100%;
