--- a/bootstrap.css
+++ b/bootstrap.css
@@ -11,8 +11,20 @@ body {
   background: black;
 }
 
-p {
+.divisas {
   text-align: center;
+}
+
+#btn1 {
+  margin: 5px;
+  padding: 2px;
+  width: 75px;
+}
+
+#btn2 {
+  margin: 5px;
+  padding: 2px;
+  width: 75px;
 }
 
 .container {
@@ -31,7 +43,6 @@ p {
 .divisas {
   margin-top: 5px;
   padding: 5px;
-  text-align: center;
   color: red;
 }
 
