--- a/bootstrap.scss
+++ b/bootstrap.scss
@@ -2,24 +2,28 @@
     font-family: sans-serif;
     padding: 0px;
 }
+.visible {
+    display:none}
 
 body {
     overflow-x: hidden;
 }
+
 .darkMode {
     background: black;
-  }
+}
 
 .divisas {
     text-align: center;
 }
 
-#btn1{
+#btn1 {
     margin: 5px;
     padding: 2px;
     width: 75px;
 }
-#btn2{
+
+#btn2 {
     margin: 5px;
     padding: 2px;
     width: 75px;
@@ -118,16 +122,16 @@ body {
     }
 
     .cajas-6 {
-            border: 2px solid black;
-            text-align: center;
-            margin: 15px;
-            width: 24%;
-            padding: 3px;
-            background-image: url(https://larepublica.pe/resizer/ljfbahHp9nsc61pO21l7wUius6Q=/480x282/top/smart/arc-anglerfish-arc2-prod-gruporepublica.s3.amazonaws.com/public/OOGUX6H7GBBN7OUJ2BAXOTGY2A.jpg);
-            background-size: cover;
-        }
-
+        border: 2px solid black;
+        text-align: center;
+        margin: 15px;
+        width: 24%;
+        padding: 3px;
+        background-image: url(https://larepublica.pe/resizer/ljfbahHp9nsc61pO21l7wUius6Q=/480x282/top/smart/arc-anglerfish-arc2-prod-gruporepublica.s3.amazonaws.com/public/OOGUX6H7GBBN7OUJ2BAXOTGY2A.jpg);
+        background-size: cover;
     }
+
+}
 
 
 h2 {
@@ -152,39 +156,47 @@ footer {
 }
 
 .total {
-    color:black;
-font-size: 30px;}
+    color: black;
+    font-size: 30px;
+}
 
 .total2 {
-    color:black;
-font-size: 30px;}
+    color: black;
+    font-size: 30px;
+}
 
-.total3{
-    color:black;
-    font-size: 30px;  
-} 
+.total3 {
+    color: black;
+    font-size: 30px;
+}
 
-.total4{
-    color:black;
-    font-size: 30px;  
-} 
-.total5{
-    color:black;
-    font-size: 30px;  
-} 
-.total6{
-    color:black;
-    font-size: 30px;  
-} 
-.modo { text-align: center;
-    padding: 10px;
-margin: 10px;
-.enlace {
+.total4 {
+    color: black;
+    font-size: 30px;
+}
+
+.total5 {
+    color: black;
+    font-size: 30px;
+}
+
+.total6 {
+    color: black;
+    font-size: 30px;
+}
+
+.modo {
     text-align: center;
-    background: black;
-    color:white
-    ;
-}}
+    padding: 10px;
+    margin: 10px;
+
+    .enlace {
+        text-align: center;
+        background: black;
+        color: white;
+    }
+}
+
 @media screen and (min-width: 100px) and (max-width: 959px) {
     .inflacion img {
         width: 100%;
